Fix spacing in styles.scss file

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -192,6 +192,7 @@ header {
   }
 }
 
+
 /* BANNER IMAGE*/
 .banner-image {
   background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)),url("../images/green-apples.jpg");
@@ -222,6 +223,7 @@ header {
   margin-top: 50px;
 }
 
+
 /* FILTER SIDEBAR */
 aside {
   background-color: white;
@@ -247,6 +249,7 @@ aside {
       margin: 2px;
     }
 }
+
 
 /* RECIPE CARD SECTION */
 main {
@@ -324,8 +327,8 @@ main {
   }
 }
 
-/* BUTTONS */
 
+/* BUTTONS */
 .show-pantry-recipes-btn {
   margin-top: 10px;
   @include button-format();
@@ -345,8 +348,6 @@ main {
     background-color: $secondary-header-color;
   }
 }
-
-
 
 
 /* PANTRY LIST */
@@ -371,10 +372,11 @@ main {
 }
 
 .pantry-list {
-  color: #000000;
+  color: black;
   padding-left: 15px;
   text-align: left;
 }
+
 
 /* RECIPE INSTRUCTIONS */
 .recipe-instructions {
